# reporting-engine

./: README.md
base_comment_template/: README.rst  __manifest__.py
base_comment_template/models/: base_comment_template.py  comment_template.py
base_comment_template/static/description/: index.html
base_comment_template/tests/: test_base_comment_template.py
base_comment_template/views/: base_comment_template_view.xml  res_partner_view.xml
base_comment_template/wizard/: base_comment_template_preview_views.xml
bi_sql_editor/: README.rst
bi_sql_editor/i18n/: am.po  ar.po  bg.po  bi_sql_editor.pot  bs.po  ca.po  cs.po  da.po  de.po  el_GR.po  en_GB.po  es.po  es_AR.po  es_CL.po  es_CO.po  es_CR.po  es_DO.po  es_EC.po  es_ES.po  es_MX.po  es_PE.po  es_PY.po  es_VE.po  et.po  eu.po  fa.po  fi.po  fr.po  fr_CA.po  fr_CH.po  gl.po  gl_ES.po  he.po  hr.po  hr_HR.po  hu.po  id.po  it.po  ja.po  ko.po  (+29 more)
bi_sql_editor/models/: bi_sql_view.py
bi_sql_editor/static/description/: index.html
bi_sql_editor/tests/: test_bi_sql_view.py
setup/_metapackage/: pyproject.toml
sql_request_abstract/i18n/: am.po  ar.po  bg.po  bs.po  ca.po  cs.po  da.po  de.po  el_GR.po  en_GB.po  es.po  es_AR.po  es_CL.po  es_CO.po  es_CR.po  es_DO.po  es_EC.po  es_ES.po  es_MX.po  es_PE.po  es_PY.po  es_VE.po  et.po  eu.po  fa.po  fi.po  fr.po  fr_CA.po  fr_CH.po  gl.po  gl_ES.po  he.po  hr.po  hr_HR.po  hu.po  id.po  it.po  ja.po  ko.po  lt.po  (+29 more)
