[project]
name = "odoo-addons-oca-reporting-engine"
version = "18.0.20241204.0"
dependencies = [
    "odoo-addon-bi_sql_editor==18.0.*",
    "odoo-addon-report_xlsx==18.0.*",
    "odoo-addon-sql_request_abstract==18.0.*",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 18.0",
]
